fix: wrong verticle scrollbar

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -322,6 +322,7 @@ article {
 
   /* 数学样式 */
   mjx-container[display='true'] {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 }
